syntax="proto3";
package pb;
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/rpc/status.proto";
import "google/rpc/error_details.proto";
option go_package = "github.com/vietquan-37/gateway/pkg/auth/pb";
message CreateUserRequest{
  string user_name=1;
  string full_name=2;
  string password=3;
  string phone_number=4;
}

message UserResponse{
  int32 user_id=1;
  string user_name=2;
  string full_name=3;
  string phone_number=4;
  string role=5;
  google.protobuf.Timestamp create_at=6;
}
message GetOneUserRequest{
  int32 id=1;
}

message GoogleLoginRequest{
  string code=1;
}

message LoginRequest{
  string user_name=1;
  string password=2;
}
message LoginResponse{
  string access_token=1;
  string refresh_token=2;
  int32 user_id=3;
}
service AuthService{
  rpc Register(CreateUserRequest)returns(UserResponse){
    option (google.api.http) = {
      post: "/v1/create_user"
      body: "*"
    };
  }
  rpc Login(LoginRequest)returns(LoginResponse){
    option (google.api.http) = {
      post: "/v1/login"
      body: "*"
    };
  }
  rpc GoogleLogin(GoogleLoginRequest)returns(LoginResponse){
    option(google.api.http)={
      post: "/v1/google/outbound"
      body:"*"
    };
  }
  rpc GetOneUser(GetOneUserRequest)returns(UserResponse){
    option (google.api.http) = {
      get: "/v1/user/{id}"

    };
  }

}